fix layout problem

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 	box-sizing: border-box;
 }
 
-
 body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
@@ -27,8 +26,8 @@ p {
 }
 
 
-
 /* ------------ LAYOUT CONTAINERS ------------ */
+
 
 header {
 	display: flex;
@@ -53,6 +52,7 @@ header {
 .logo {
 	color: #fff;
 	margin-left: 10px;
+	font-size: 1.3em;
 }
 
 .header-nav {
@@ -111,6 +111,7 @@ header {
 .close-button {
 	padding-right: 10px;
 	font-weight: bold;
+	cursor: pointer;
 }
 
 .user-photo {
@@ -140,7 +141,6 @@ header {
 
 a {
 	display: inline-block;
-	padding-bottom: 30px;
 }
 
 
@@ -195,12 +195,7 @@ img {
 	width: 10%;
 }
 
-svg {
-	width: 120px;
-}
-
 /* ------------ CHARTS ------------ */
-
 
 
 .panel-traffic .chart-container {
@@ -215,9 +210,6 @@ svg {
 	display: flex;
 	justify-content: flex-end;
 }
-
-
-
 
 .panel-traffic .traffic-labels button {
 	font-size: 0.8em;
@@ -252,7 +244,10 @@ svg {
 
 .twitter-stats,
 .facebook-stats,
-.google-stats {
+.google-stats,
+.instagram-stats,
+.linkedin-stats,
+.pinterest-stats {
 	display: flex;
 	background-color: #d7f7fc;
 	border: 1px solid #51CADC;
@@ -293,6 +288,10 @@ svg {
 	margin-top: -18px;
 }
 
+.linkedin-svg {
+	width: 150%;
+	margin: -11px -6px;
+}
 
 /* ------------ MEMEBR PANEL ------------ */
 
@@ -360,7 +359,7 @@ svg {
 }
 
 .user-message {
-	border-bottom: 1px solid #C0DAE3;
+	/*border-bottom: 1px solid #C0DAE3;*/
 	padding-bottom: 20px;
 }
 
@@ -373,14 +372,22 @@ select {
 	border-radius: 8px;
 	border: 2px solid #fff;
 	outline: 0;
-	width: 100%;
+	border:1px solid #CDF6FC;
 	transition: all 0.4s;
 }
 
-.user-message input {
-	width: 88%;
+/* Stop input box extending ourtside container */
+input.wide,
+select.wide {
+    width: 100%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
+.message {
+	width: 100%;
+}
 .user-settings span {
 	font-size: 0.8em;
 }
@@ -523,9 +530,21 @@ input:checked + .slider .on {
 
 @media ( min-width: 768px ) {
 
+	[class^="panel-"] {
+		padding: 60px;
+	}
+
 	#wrapper {
 		display: flex;
 	}
+
+	.logo {
+		font-size: 2em;
+	}
+
+	.dashboard-header h1 {
+	  font-size: 1.5em;
+	 }
 	
 	.main-nav.flex {
 		flex-direction: column;
@@ -557,6 +576,11 @@ input:checked + .slider .on {
 		width: 100%;
 	}
 
+	a {
+		padding-bottom: 30px;
+	}
+
+
 	.traffic-labels {
 		justify-content: flex-end;
 	}
@@ -569,6 +593,7 @@ input:checked + .slider .on {
 		text-align: right;
 		padding-right: 20px;
 		width: 80%;
+		max-width: 800px;
 	}
 
 	.search-box input {
@@ -583,13 +608,17 @@ input:checked + .slider .on {
 	}
 
 	.panel-statistic {
-		padding: 0;
+		padding: 0 40px;
 	}
 
 	.twitter-stats, 
 	.facebook-stats, 
-	.google-stats {
-		width: 32%;
+	.google-stats,
+	.instagram-stats,
+	.linkedin-stats,
+	.pinterest-stats {
+		width: 30%;
+		margin-bottom: 20px;
 	}
 
 	.member img {
@@ -601,7 +630,7 @@ input:checked + .slider .on {
 	.panel-user {
 		flex-direction: row;
 		justify-content: space-between;
-		padding: 0;
+		padding: 0 40px 0px 40px;
 	}
 
 	.new-member,
@@ -611,13 +640,22 @@ input:checked + .slider .on {
 	
 	.new-member,
 	.recent-activity,
-	.user-settings  {
-		padding: 20px;
+	.user-settings,
+	.user-message  {
 		flex: 1; /* flex-grow: 1 doesn't work */
+	}
+
+	.new-member,
+	.user-message  {
+		padding-right: 40px;
+	}
+
+	.recent-activity,
+	.user-settings {
+		padding-left: 40px;
 	}
 	
 	.user-message {
-		padding: 20px;
 		flex: 1.08; /* fix right border alignment */
 	}	
 
@@ -630,19 +668,10 @@ input:checked + .slider .on {
 		height: 86px;
 	}
 
-	select {
-		width: 100%;
-	}
-
-	.user-message input {
-		width: 89%;
-	}
-
 	.canvas-container {
 		position: relative;
 		width: 100%;
 		height: 85%;
-		/*border: 1px solid black;*/
 	}
 
 	.daily-traffic {
@@ -657,10 +686,10 @@ input:checked + .slider .on {
 }
 
 @media (min-width: 769px) {
-	/* fix panel-user right border alignment */
+
 	.user-message,
 	.user-settings {
-		flex: 1.08; 
+		flex: 1.08; /* fix panel-user right border alignment */
 	}
 
 }
@@ -673,11 +702,5 @@ input:checked + .slider .on {
 	.search-box {
 		width: 80%;
 	}
-
-	.user-message input {
-		width: 92%;
-	}
-
-
 
 }
